fix: update styles for notification and DateTimeMenu with improved spacing and font sizes

--- a/styles/common/mixins.scss
+++ b/styles/common/mixins.scss
@@ -38,7 +38,7 @@
   font-size: 20px;
 }
 
-%title_4 {
+%title_5 {
   font-weight: 700;
   font-size: 16px;
 }
@@ -55,7 +55,7 @@
 
 %caption_heading {
   font-weight: 700;
-  font-size: 12px;
+  font-size: 13px;
 }
 
 %caption {
